tests/core/error/cast-3.rq
SELECT ("asdf"^^xsd:dateTime AS ?b) { }
